[tool.poetry]
name = "sample-project"
version = "0.1.0"
description = ""
authors = ["William Rodrigues <williamrodrigues2442@gmail.com>"]
readme = "README.md"
packages = [{include = "sample_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
